@@ -32,6 +32,7 @@ sunuo (0.3.0) unstable; urgency=low
   * all unsafe code replaced with managed implementations
   * added property Mobile.LastCombatTime
   * added interface IGold
+  * optimized memory allocations during world load
   * login: use proprietary timestamp format for now
   * login: initialize all columns
   * login: print name of failed game server
